--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,19 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Document</title>
+		<title>Accueil</title>
 	</head>
 	<body>
-		<h1>Hello, Astro!</h1>
+		<header>
+			<nav>
+                <a href="/">Accueil</a>
+                <a href="/offres">Offres</a>
+			</nav>
+		</header>
+		<main>
+			<h1>Bienvenue sur la page d'accueil</h1>
+		</main>
 	</body>
-</html>
-
+	</html>
