--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,6 @@
----
-import Header from "../components/Header.astro";
----
+<header>
+    <nav>
+        <a href="/">Accueil</a>
+        <a href="/offres">Offres</a>
+    </nav>
+</header>
