--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header>
+<header class="footer bg-purple-100 text-blue-900">
     <nav>
         <a href="/">Accueil</a>
         <a href="/offres">Offres</a>
