--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,27 +2,27 @@
 
 ---
 
-<div class="footer mt-20 bg-blue-300 text-white">
+<div class="footer mt-10 bg-purple-100 text-white">
     <div class="ml-20 footer__top">
         <div class="footer__brand">
-            <p class="font-bold uppercase text-blue-900">House</p>
+            <p class="font-bold uppercase text-blue-900">Estatery</p>
         </div>
         <div class="column">
             <div class="sub__column">
-                <p class="column__title text-blue-900">sell a home</p>
+                <p class="column__title text-blue-900">Vendre une maison</p>
                 <div class="sub__links">
-                    <a class="column__link" href="#">Request an offer</a>
-                    <a class="column__link" href="#">Pricing</a>
-                    <a class="column__link" href="#">Reviews</a>
-                    <a class="column__link" href="#">Stories</a>
+                    <a class="column__link" href="#">Demander une offre</a>
+                    <a class="column__link" href="#">Tarification</a>
+                    <a class="column__link" href="#">Avis</a>
+                    <a class="column__link" href="#">Histoires</a>
                 </div>
                 
             </div>
             <div class="sub__column pt-10">
-                <p class="column__title text-blue-900">bye a home</p>
+                <p class="column__title text-blue-900">Acheter une maison</p>
                 <div class="sub__links">
-                    <a class="column__link" href="#">Buy</a>
-                    <a class="column__link" href="#">Finance</a>
+                    <a class="column__link" href="#">Acheter</a>
+                    <a class="column__link" href="#">Financer</a>
                 </div>
                 
             </div>
@@ -30,31 +30,31 @@
         </div>
         <div class="column">
             <div class="sub__column">
-                <p class="column__title text-blue-900">Buy, rent and sell</p>
+                <p class="column__title text-blue-900">Acheter, louer et vendre</p>
                 <div class="sub__links">
-                    <a class="column__link" href="#">Buy and sell properties</a>
-                    <a class="column__link" href="#">Rent home</a>
-                    <a class="column__link" href="#">Builder trade-up</a>
+                    <a class="column__link" href="#">Acheter</a>
+                    <a class="column__link" href="#">Louer une maison</a>
+                    <a class="column__link" href="#">Échange de constructeur</a>
                 </div>
                 
             </div>
             <div class="sub__column pt-10">
-                <p class="column__title text-blue-900">Terms & privacy</p>
+                <p class="column__title text-blue-900">Conditions & confidentialité</p>
                 <div class="sub__links">
-                    <a class="column__link" href="#">Trust & Safety</a>
-                    <a class="column__link" href="#">Terms of Service</a>
-                    <a class="column__link" href="#">Privacy Policy</a>
+                    <a class="column__link" href="#">Confiance & sécurité</a>
+                    <a class="column__link" href="#">Conditions d'utilisation</a>
+                    <a class="column__link" href="#">Politique de confidentialité</a>
                 </div>
             </div>
         </div>
         <div class="column">
             <div class="sub__column">
-                <p class="column__title text-blue-900">About</p>
+                <p class="column__title text-blue-900">À Propos</p>
                 <div class="sub__links">
-                    <a class="column__link" href="#">Compagny</a>
-                    <a class="column__link" href="#">How it works</a>
+                    <a class="column__link" href="#">Entreprise</a>
+                    <a class="column__link" href="#">Comment ça marche</a>
                     <a class="column__link" href="#">Contact</a>
-                    <a class="column__link" href="#">Investors</a>
+                    <a class="column__link" href="#">Investisseurs</a>
                 </div>
                 
             </div>
@@ -64,14 +64,14 @@
                     <a class="column__link" href="#">Blog</a>
                     <a class="column__link" href="#">Guide</a>
                     <a class="column__link" href="#">FAQ</a>
-                    <a class="column__link" href="#">Help Center</a>
+                    <a class="column__link" href="#">Centre d'aide</a>
                 </div>
             </div>
         </div>
     </div>
     <div class="ml-20 footer__bot">
         <div class="bot__left">
-            <p class="left__mention">@2021 Estatery. All rights reserved</p>
+            <p class="left__mention">@2021 Estatery. Touts droits réservés</p>
         </div>
     </div>
 </div>
