--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import Base from '../layouts/base.astro'
 ---
 
 <Base titre="accueil">
-	<h1 class="font-bold text-blue-900">Accueil</h1>
+	<h1 class="font-bold mt-10 text-blue-900">Accueil</h1>
 </Base>
 
