--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,7 +1,57 @@
 ---
-import Base from '../layouts/base.astro'
+import Base from '../Layouts/Base.astro'
+const offres = [
+    {
+        "adresse": "2821 Lake Sevilla, Palm Harbor, TX",
+        "favori": true,
+        "id": "64l3n8nar836i5j",
+        "nbChambres": 4,
+        "nbSdb": 2,
+        "nomMaison": "Beverly Springfield",
+        "prix": 2700,
+        "surface": 45,
+        "imgUrl": "image1.png"
+    },
+
+    {
+        "adresse": "2699 Green Valley, Highland Lake",
+        "favori": true,
+        "id": "lo831zeg10hpm9y",
+        "nbChambres": 4,
+        "nbSdb": 2,
+        "nomMaison": "Palm Harbor",
+        "prix": 2095,
+        "surface": 42,
+        "imgUrl": "image2.png"
+    },
+
+    {
+        "adresse": "909 Woodland St, Michigan, IN",
+        "favori": false,
+        "id": "s1zuhj19x8eb242",
+        "nbChambres": 4,
+        "nbSdb": 3,
+        "nomMaison": "Faulkner Ave",
+        "prix": 4550,
+        "surface": 80,
+        "imgUrl": "image3.png"
+    },
+]
 ---
 
-<Base titre="Offres">
+  <Base titre="Offres">
 	<h1 class="font-bold text-blue-900">Offres</h1>
+
+	<ul>
+		{offres.map((item) => (
+			<li key={item.id} class="mb-4 border p-4 bg-purple-100">
+				<h2 class="text-xl font-semibold">{item.nomMaison}</h2>
+				<p class="text-gray-600">Adresse : {item.adresse}</p>
+				<p class="text-gray-600">Chambres: {item.nbChambres} | Salles de bain: {item.nbSdb}</p>
+				<p class="text-gray-800">{item.prix} €/mois</p>
+				<p class="text-gray-600">Surface: {item.surface} m²</p>
+				{item.favori && <span class="text-red-500">Favori</span>}
+			</li>
+		))}
+	</ul>
 </Base>
