--- a/src/Layouts/Base.astro
+++ b/src/Layouts/Base.astro
@@ -1,6 +1,8 @@
 ---
 import Header from "../components/Header.astro";
+import Card from "../components/Card.astro";
 import Footer from "../components/Footer.astro";
+
 ---
 
 <html lang="en">
@@ -14,6 +16,7 @@ import Footer from "../components/Footer.astro";
         <Header />
 		<main>
 			<slot />
+			<Card />
 		</main>
 	</body>
 	</html>
