--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,51 +1,15 @@
 ---
-const item = [
-    {
-        "adresse": "2821 Lake Sevilla, Palm Harbor, TX",
-        "favori": true,
-        "id": "64l3n8nar836i5j",
-        "nbChambres": 4,
-        "nbSdb": 2,
-        "nomMaison": "Beverly Springfield",
-        "prix": 2700,
-        "surface": 45,
-        "imgUrl": "image1.png"
-    },
+const {...item}=Astro.props
 
-    {
-        "adresse": "2699 Green Valley, Highland Lake",
-        "favori": true,
-        "id": "lo831zeg10hpm9y",
-        "nbChambres": 4,
-        "nbSdb": 2,
-        "nomMaison": "Palm Harbor",
-        "prix": 2095,
-        "surface": 42,
-        "imgUrl": "image2.png"
-    },
-
-    {
-        "adresse": "909 Woodland St, Michigan, IN",
-        "favori": false,
-        "id": "s1zuhj19x8eb242",
-        "nbChambres": 4,
-        "nbSdb": 3,
-        "nomMaison": "Faulkner Ave",
-        "prix": 4550,
-        "surface": 80,
-        "imgUrl": "image3.png"
-    },
-]
 ---
-<ul>
-{item.map((item) => (
-    <li class="mb-4 border p-4 bg-purple-100">
-        <h2 class="text-xl font-semibold">{item.nomMaison}</h2>
-        <p class="text-gray-600">Adresse : {item.adresse}</p>
-        <p class="text-gray-600">Chambres: {item.nbChambres} | Salles de bain: {item.nbSdb}</p>
-        <p class="text-gray-800">{item.prix} €/mois</p>
-        <p class="text-gray-600">Surface: {item.surface} m²</p>
-        {item.favori && <span class="text-green-500">Favori</span>}
-    </li>
-))}
-</ul>
+
+<div class="card border w-80 shadow-black bg-  border-radius rounded-xl bg px-5 py-5">
+    <h2 class="font-bold text-lg mb-6">{item.nomMaison}</h2>
+    <img src={item.img} alt={item.imgAlt} class="w-64 h-64 object-cover" />
+    <p class="mb-2">Adresse : {item.adresse}</p>
+    <p class="mb-5">Prix : {item.prix} €</p>
+    <p class="mb-2">Nombre de salles de bains : {item.nbSdb}</p>
+    <p class="mb-2">Surface : {item.surface} m²</p>
+    <p class="mb-2">Nombre de chambres : {item.nbChambres}</p>
+    <p>Favori : {item.favori}</p>
+</div>
