add dossier offres

--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -1,7 +1,7 @@
 ---
-import Card from '../components/Card.astro';
-import Base from '../Layouts/Base.astro';
-import { getOffres } from '../js/backend.mjs';
+import Card from '../../components/Card.astro';
+import Base from '../../Layouts/Base.astro';
+import { getOffres } from '../../js/backend.mjs';
 
 const offres = await getOffres();
 ---
