--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,15 +1,45 @@
 ---
 const {...item}=Astro.props
+const {... offre} = Astro.props
 
 ---
-
-<div class="card border w-80 shadow-black bg-  border-radius rounded-xl bg px-5 py-5">
-    <h2 class="font-bold text-lg mb-6">{item.nomMaison}</h2>
-    <img src={item.img} alt={item.imgAlt} class="w-64 h-64 object-cover" />
-    <p class="mb-2">Adresse : {item.adresse}</p>
-    <p class="mb-5">Prix : {item.prix} €</p>
-    <p class="mb-2">Nombre de salles de bains : {item.nbSdb}</p>
-    <p class="mb-2">Surface : {item.surface} m²</p>
-    <p class="mb-2">Nombre de chambres : {item.nbChambres}</p>
-    <p>Favori : {item.favori}</p>
-</div>
+<div class="group relative h-96 w-72 [perspective:1000px]">
+    <div
+      class="absolute duration-1000 w-full h-full [transform-style:preserve-3d] group-hover:[transform:rotateX(180deg)]"
+    >
+      <div
+        class="absolute w-full h-full rounded-xl bg-gradient-to-br bg-purple-400 p-6 text-white [backface-visibility:hidden]"
+      >
+        <div class="flex flex-col h-full">
+          <div class="flex justify-between items-start">
+            <h2 class="font-bold text-lg mb-6 text-[24px]">{item.nomMaison}</h2>
+          </div>
+          <div class="border-radius rounded-xl overflow-hidden mb-4">
+            <img src={item.img} alt={item.imgAlt} class="w-64 h-64 object-cover" />
+          </div>
+          <div class="mt-auto">
+          </div>
+        </div>
+      </div>
+      <div
+        class="absolute w-full h-full rounded-xl bg-gradient-to-br bg-purple-600 p-6 text-white [transform:rotateX(180deg)] [backface-visibility:hidden]"
+      >
+        <div class="flex flex-col h-full">
+            <p class="mb-5">Prix : {item.prix} €</p>
+          <div class="flex-grow text-[18px]">
+            <p class="mb-2">Adresse : {item.adresse}</p>
+            <p class="mb-2">Nombre de salles de bains : {item.nbSdb}</p>
+            <p class="mb-2">Surface : {item.surface} m²</p>
+            <p class="mb-2">Nombre de chambres : {item.nbChambres}</p>
+            <p>Favori : {item.favori}</p>
+          </div>
+          <div class="flex justify-between items-center mt-auto">
+            <button
+              class="px-4 py-2 bg-white text-purple-600 rounded-lg font-semibold hover:bg-opacity-90 transition-colors">
+              <a href={`/offres/${offre.id}`}>En savoir</a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
