--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -1,12 +1,15 @@
 ---
+
 import Card from '../../components/Card.astro';
 import Base from '../../Layouts/Base.astro';
 import { getOffres } from '../../js/backend.mjs';
+
 
 const offres = await getOffres();
 ---
 
 <Base titre="offres">
+    <a href="/offres/surface/80" class="bg-purple-100 text-blue-900">Voir les offres de plus de 80m²</a>
     <div class="flex justify-center text-4xl mt-10">
         <h1 class="font-bold uppercase text-purple-100">Nos offres</h1>
     </div>
