--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -9,7 +9,7 @@ const offres = await getOffres();
 ---
 
 <Base titre="offres">
-    <a href="/offres/surface/80" class="bg-purple-100 text-blue-900">Voir les offres de plus de 80m²</a>
+
     <div class="flex justify-center text-4xl mt-10">
         <h1 class="font-bold uppercase text-purple-100">Nos offres</h1>
     </div>
@@ -21,6 +21,13 @@ const offres = await getOffres();
         <div x-show="!showFavorites" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mx-10 mt-10">
             {offres.map((item) => item.favori && <Card {...item} />)}
         </div>
+
+        <button
+        class="px-8 z-30 py-4 bg-purple-500 rounded-md text-white relative font-semibold after:-z-20 after:absolute after:h-1 after:w-1 after:bg-purple-700 after:left-5 overflow-hidden after:bottom-0 after:translate-y-full after:rounded-md after:hover:scale-[300] after:hover:transition-all after:hover:duration-700 after:transition-all after:duration-700 transition-all duration-700 text-2xl"
+      >    <a href="/offres/surface/80" >Voir les offres de plus de 80m²</a>
+      
+      </button>
+
         <div class="flex justify-center">
             <button @click="showFavorites = !showFavorites" class="mb-4 p-2 bg-purple-100 text-blue-900 rounded mt-5">
             <span x-show="!showFavorites">Afficher les favoris</span>
