--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -23,7 +23,7 @@ const offres = await getOffres();
         </div>
 
         <button
-        class="px-8 z-30 py-4 bg-purple-500 rounded-md text-white relative font-semibold after:-z-20 after:absolute after:h-1 after:w-1 after:bg-purple-700 after:left-5 overflow-hidden after:bottom-0 after:translate-y-full after:rounded-md after:hover:scale-[300] after:hover:transition-all after:hover:duration-700 after:transition-all after:duration-700 transition-all duration-700 text-2xl"
+        class="px-8 z-30 py-4 my-4 bg-purple-500 rounded-md text-white relative font-semibold after:-z-20 after:absolute after:h-1 after:w-1 after:bg-purple-700 after:left-5 overflow-hidden after:bottom-0 after:translate-y-full after:rounded-md after:hover:scale-[300] after:hover:transition-all after:hover:duration-700 after:transition-all after:duration-700 transition-all duration-700 text-2xl"
       >    <a href="/offres/surface/80" >Voir les offres de plus de 80m²</a>
       
       </button>
