--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 <header class="footer bg-purple-100 text-blue-900">
-    <nav>
-        <a href="/">Accueil</a>
-        <a href="/offres">Offres</a>
+    <nav class="font-bold text-2xl">
+        <a href="/" class="bg-purple-300">Accueil </a>
+        <a href="/offres" class="bg-purple-300">Offres </a>
     </nav>
 </header>
